tests/fixtures/invalid/pow_str_dict_dict.py
# Cannot call pow() with Str, Dict[str, int], Dict[str, int]
x = pow("hello", {"a": 1}, {"a": 1})
